# Plotty

./: .gitignore  .gitmodules  CMakeLists.txt  CSVReader.cpp  CSVReader.hpp  Mesh.cpp  Mesh.hpp  Plotty  README.md  Shader.cpp  Shader.hpp  SmoothCurve.cpp  SmoothCurve.hpp  build.sh  clean.sh  defines.hpp  geodesicSphere.csv  glMesh.cpp  glMesh.hpp  glWindow.cpp  glWindow.hpp  plot3d.cpp  plotty.cpp
glad/: glad.c  glad.h
modules/glfw/include/GLFW/: glfw3native.h
res/meshes/: ONF.csv  X.csv  Y.csv  Z.csv  sine.csv  spiral.csv
res/shader/: cartesian.frag  cartesian.vert  cartesianSystem.frag  cartesianSystem.vert  spherical.vert
src/: plotty.cpp
src/3D/: Mesh.cpp  Mesh.hpp
src/3D/Interpolation/: SmoothICurve.cpp  SmoothICurve.hpp
src/IO/: CSVReader.cpp
src/Rendering/: Shader.cpp  Shader.hpp
